--- a/school_dance/pom.xml
+++ b/school_dance/pom.xml
@@ -42,8 +42,11 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+            <version>8.0.32</version>
+            <scope>runtime</scope>
 		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
